# FlatBuffersCpp

./: .gitignore  CMakeLists.txt  README.md
Experiments/: CMakeLists.txt  README.txt  main.cpp
Experiments/scheme/: all_headers.h  client.fbs  client_generated.h  exchange_type.fbs  message.fbs  order_type.fbs  ping.fbs  server.fbs  server_generated.h  side.fbs
LoggerExample/: CMakeLists.txt  main.cpp
LoggerExample/scheme/: all_headers.h  log_schema.fbs  log_schema_generated.h
